style.css
* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-size: 1em;
}

body {
  background: #F6F6F6;
  font-family: monospace;
  font-size: 2rem;
  padding-left: 20%;
  max-width: 85%;
}

aside {
  font-size: 1.5rem;
  padding: 1.3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  position: absolute;
  z-index: 10;
  right: 0;
  top: 0;
  width: 10rem;
  min-height: 40%;
/*   background: #A7CDCC; */
  color: #004A55;
}

aside > .pulldown-pointer {
  width: 0;
  height: 0;
  border-left: 5rem solid transparent;
  border-right: 5rem solid transparent;
  border-top: 2rem solid #004A55;
  top: 0;
  z-index: 12;
  margin-left: -1.3rem;
  position: absolute;
  cursor: pointer;
}

aside > .pulldown {
  background-color: #004A55;
  color: #004A55;
  width: 100%;
  height: 0;
  opacity: 0;
  pointer-events: none;
  -webkit-transition: height 0.4s 0.25s, color 0.3s, opacity 0.33s;
  transition: height 0.4s 0.25s, color 0.3s, opacity 0.33s;
  position: absolute;
  margin-left: -1.3rem;
  margin-top: -1.3rem;
  top: 1.3rem;
  padding: 1rem;
  z-index: 13;
  overflow: hidden;
}

aside > .pulldown > span {
  color: #F87D09;
  cursor: pointer;
}

aside.open > .pulldown {
  opacity: 1;
  height: 100%;
  color: #F6F6F6;
  pointer-events: unset;
  -webkit-transition: height 0.4s, opacity 0.4s;
  transition: height 0.4s, opacity 0.4s;
}

aside > p a {
  text-decoration: none;
  color: #000;
}

aside > .pulldown a {
  text-decoration: none;
  color: #004A55;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}
aside.open > .pulldown a {
  color: #A7CDCC;
}

aside a:hover {
  text-decoration: underline;
}

aside a:active {
  color: #F87D09;
}

p.description {
  width: 90%;
}

blockquote {
  font-size: 0.7em;
  margin-left: 0em;
  padding-left: 2.5em;
}

blockquote, em {
  background: #ddd;
  color: #777;
}

h2 {
  color: #F87D09;
}

ul {
  list-style-type: none;
}

ul {
  counter-reset: listCounter;
}

ul > li::before {
  content: counter(listCounter);
  counter-increment: listCounter;
  position: absolute;
  margin-left: -1.5em;
  padding-right: 1.2em;
  font-size: .75em;
  color: #ddd;
  -webkit-transform: translate(-25%, 25%);
          transform: translate(-25%, 25%);
}

@media (max-width: 725px) {
  aside {
    position: relative;
    width: 100%;
    min-height: unset;
  }
  
  body {
    max-width: 100%;
    padding-left: 12%;
  }
}

